--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -105,9 +105,7 @@
       <div class="modal__three" id="modal__three">
         <div class="modal__change" id="modal-change">
           <div class="modal__container-three">
-            <h2 class="modal__three-heading">
-              Изменить данные
-            </h2>
+            <h2 class="modal__three-heading">Изменить данные</h2>
             <p class="change__id" id="change__Id"></p>
             <button class="button__three-closed btn__reset" id="closed__modal-svg">
               <svg class="" width="29" height="29" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg">
