--- a/crm-frontend/index.html
+++ b/crm-frontend/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="container__create-contact" id="create__contacts">
             </div>
-            <button class="modal__contacts btn__reset" type="button" id="modal__contacts" disabled>
+            <button class="modal__contacts btn__reset" type="button" id="modal__contacts">
               <span class="btn__span">
                 <svg class="svg__modal" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_224_8628)">
